fixed dark mode and added a new font for title

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 @import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+    --font-bebas: "Bebas Neue", "roboto";
+}
+/*@tailwind base;
+@tailwind components;
+@tailwind utilities;*/
+
+/*@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";*/
